# signal

Automation signal trading/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Automation signal trading/data/: signals.sqlite3
Automation signal trading/pytest_cache/v/cache/: nodeids
Automation signal trading/src/trading_signal_agent/: app.py  config.py  http.py  indicators.py  market_data.py  models.py  news.py  signal_engine.py  storage.py  telegram.py
Automation signal trading/tests/: test_indicators.py  test_market_data.py  test_news.py  test_signal_engine.py  test_storage.py
